Clean up, add empty integrations page

--- a/front-end-pages/admin-pages/admin-integrations.html
+++ b/front-end-pages/admin-pages/admin-integrations.html
@@ -3,12 +3,12 @@
 	
 	<head>
 		<title>
-			
+			Integrations Page for Admin
 		</title>
 	</head>
 	
 	<body>
-		THIS IS WHERE THE TABLE WOULD GO
+		INTEGRATIONS PAGE
 	</body>
 
 </html>
