--- a/front-end-pages/admin-pages/admin-members-table.html
+++ b/front-end-pages/admin-pages/admin-members-table.html
@@ -15,7 +15,7 @@
             <th>Next Payment Due</th>              
           </tr>
           <tr>
-            <td><a href="admin-members-edit.html" class="edit">&#9998</a></td>
+            <td><a href="?member=1" class="edit">&#9998</a></td>
             <td>Dana Koutsky</td>
             <td>8/30/2016</td>
             <td>Individual:Basic</td>
