Integrate member_table.php with plugin

--- a/front-end-pages/admin-pages/admin-members-table.html
+++ b/front-end-pages/admin-pages/admin-members-table.html
@@ -6,6 +6,8 @@
 	</head>
 	
 	<body>
+		<?php include 'member_table.php';?>
+<!--
 		<table>
           <tr>
             <th></th>
@@ -85,6 +87,7 @@
             <td>11/3/2016</td>
           </tr>
         </table>
+-->
 	</body>
 
 </html>
