--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -12,7 +12,7 @@
 
 		<table>
 			<th>
-				<div id="mas-breadcrumb" class="breadcrumb">
+				<div id="breadcrumb" class="mas-breadcrumb">
 					<a href="?content=1">Members</a> >> <?php echo $_GET['email']?>
 				</div>
 			</th>
