--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -12,7 +12,9 @@
 
 		<table>
 			<th>
-
+				<div id="breadcrumb" class="">
+					<a href="?content=1">Members</a> >> <?php echo $_GET['email']?>
+				</div>
 			</th>
 
 			<tr>
