breadcrumb span able

--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<table>
-			<th>
+			<th colspan="3">
 				<div id="breadcrumb" class="">
 					<a href="?content=1">Members</a> >> <?php echo $_GET['email']?>
 				</div>
