missed a mas- class

--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -19,7 +19,7 @@
 
 			<tr colspan="3" class="mas">
 				<?php
-					echo '<img src="' . plugins_url( '../images/female-placeholder.png', __FILE__ ) . '" id="profilePic">' . "\n";
+					echo '<img class="mas" src="' . plugins_url( '../images/female-placeholder.png', __FILE__ ) . '" id="profilePic">' . "\n";
 				?>
 
 				<h1 class="mas">First Last Name</h1>
