--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -12,7 +12,7 @@
 
 		<table class="mas">
 			<th colspan="3" class="mas">
-				<div id="breadcrumb">
+				<div id="breadcrumb" class="mas-breadcrumb">
 					<a href="?content=1" class="mas">Members</a> >> <?php echo $_GET['email']?>
 				</div>
 			</th>
