Began shift to admin pages behind wordpress admin users
Began shift to admin pages behind wordpress admin users

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Attempting to link into the admin pages

Testing fix for members view not loading on initial open

Removed public-facing admin page and added in backend pages

Fixed spacing issue

--- a/front-end-pages/admin-pages/admin-members-edit.html
+++ b/front-end-pages/admin-pages/admin-members-edit.html
@@ -13,7 +13,7 @@
 		<table class="mas">
 			<th colspan="3" class="mas">
 				<div id="breadcrumb" class="mas-breadcrumb">
-					<a href="?content=1" class="mas">Members</a> >> <?php echo $_GET['email']?>
+					<a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $_GET['email']?>
 				</div>
 			</th>
 <!-- 
