--- a/front-end-pages/admin-pages/admin-header.html
+++ b/front-end-pages/admin-pages/admin-header.html
@@ -4,11 +4,10 @@
 	echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-header.css', __FILE__ ) . '">' . "\n";
 	?>
     </head>
-    
     <body>
-        <a href="&content=1"><button class="button">Members</button></a>
+        <a href="?content=1"><button class="button">Members</button></a>
         <button class="button">Classes</button>
         <button class="button">Access</button>
-        <a href="&content=4"><button class="button">Integrations</button></a>
+        <a href="?content=4"><button class="button">Integrations</button></a>
     </body>
 </html>
