file structure + mas classes

--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -8,8 +8,8 @@
 	</head>
 	
 	<body>
-		<?php include 'admin-member_data.php';?> 
-    <!--
+		<?php include 'member_table.php';?>
+<!--
 		<table>
           <tr>
             <th></th>
@@ -89,8 +89,7 @@
             <td>11/3/2016</td>
           </tr>
         </table>
-        -->
-
+-->
 	</body>
 
 </html>
