--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -13,44 +13,44 @@
 	
 	<body>
 
-		<table>
-			<tr>
-				<td>	
+		<table class="mas">
+			<tr class="mas">
+				<td class="mas">	
 					<form>
 
 					  <div id="slack">
-					  	<h1>Slack</h1>
-					    <label for="domain">Slack Domain:</label>
-					    <input type="text" id="domain" name="domain">
+					  	<h1 class="mas">Slack</h1>
+					    <label for="domain" class="mas">Slack Domain:</label>
+					    <input type="text" id="domain" name="domain" class="mas">
 					    <br>
-					    <label for="key">API Key:</label>
-					    <input type="text" id="key" name="key">
+					    <label for="key" class="mas">API Key:</label>
+					    <input type="text" id="key" name="key" class="mas">
 					  </div>
 
 					</form>
 				</td>
 
-				<td>
-					<button class="save" type="submit">Save Changes</button>
+				<td class="mas">
+					<button class="mas-save" type="submit">Save Changes</button>
 				</td>
 			</tr>
 
-			<tr>
-				<td>
+			<tr class="mas">
+				<td class="mas">
 					<form>
 						<div id="G Suite">
-							<h1>Google for Non-Profits</h1>
-							<label for="domain">Google Domain:</label>
-							<input type="text" id="domain" name="domain">
+							<h1 class="mas">Google for Non-Profits</h1>
+							<label for="domain" class="mas">Google Domain:</label>
+							<input type="text" id="domain" name="domain" class="mas">
 							<br>
-							<label for="key">API Key:</label>
-							<input type="text" id="key" name="key">
+							<label for="key" class="mas">API Key:</label>
+							<input type="text" id="key" name="key" class="mas">
 						</div>
 					</form>
 				</td>
 
-				<td>
-					<button class="save" type="submit">Save Changes</button>
+				<td class="mas">
+					<button class="mas-save" type="submit">Save Changes</button>
 				</td>
 			</tr>
 		</table>
