whoops, double file

--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-		<?php include 'member_table.php';?>
+		<?php include 'admin-member-data.php';?>
 <!--
 		<table>
           <tr>
