initial Stripe API work

--- a/front-end-pages/admin-pages/admin-header.html
+++ b/front-end-pages/admin-pages/admin-header.html
@@ -5,3 +5,4 @@ echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-heade
 <button class="button">Classes</button>
 <button class="button">Access</button>
 <a href="admin.php?page=mas-plugin&content=4"><button class="button">Integrations</button></a>
+<a href="admin.php?page=mas-plugin&content=6"><button class="button">Registration Form Test</button></a>
