--- a/front-end-pages/admin-pages/test/form.html
+++ b/front-end-pages/admin-pages/test/form.html
@@ -8,7 +8,7 @@ echo '<form action="' . plugins_url( 'register.php', __FILE__ ) . '" method="POS
     First name:<br>
     <input type="text" name="firstname"><br>
     Last name:<br>
-    <input type="text" name="lastname">
+    <input type="text" name="lastname"><br>
     Membership type:<br>
     <select name="type">
         <option value="ib">Individual Basic</option>
@@ -16,6 +16,6 @@ echo '<form action="' . plugins_url( 'register.php', __FILE__ ) . '" method="POS
         <option value="fb">Family Basic</option>
         <option value="fs">Family Supporter</option>
     </select>
+    <br>
     <?php getStripeCheckout() ?>
-    <input type="submit" value="Submit">
 </form>
