--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
+		<?php
+            echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-classes.css', __FILE__ ) . '">' . "\n";
+        ?>
 		<title>Classes</title>
 	</head>
 
 	<body>
-
+		<br>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-5">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">Class Details</h3>
+				  </div>
+				  <div class="panel-body">
+				    Select a class to the right to view and edit details.
+				  </div>
+				</div>
+
+				<div>
+					<a href="admin.php?page=mas-plugin&content=7"><button class="btn mas-create">Create A Class</button></a>
+				</div>
 			</div>
 
 			<div class="col-md-6">
-				<table class="table-striped">
-					<th>
-						<td>Class Title</td>
-						<td>Date</td>
-						<td> # Registered</td>
-					</th>
+				<table class="table table-striped table-bordere">
+					<tr>
+						<th>Class Title</th>
+						<th>Date</th>
+						<th># Registered</th>
+					</tr>
 
 					<tr>
 						<td>Power Tools 101</td>
@@ -46,7 +60,12 @@
 			</div>
 		</div>
 
+		<!-- ANGULAR -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+
 		<!-- BOOTSTRAP -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
