--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -13,7 +13,7 @@
 			<div class="col-md-5">
 				<div class="panel panel-default">
 				  <div class="panel-heading">
-				    <h3 class="panel-title">Class Details</h3>
+				    <h3 class="mas panel-title">Class Details</h3>
 				  </div>
 				  <div class="panel-body">
 				    Select a class to the right to view and edit details.
@@ -26,7 +26,7 @@
 			</div>
 
 			<div class="col-md-6">
-				<table class="table table-striped table-bordere">
+				<table class="table table-bordered table-hover">
 					<tr>
 						<th>Class Title</th>
 						<th>Date</th>
