Beginning integration for auto-population on the admin members edit page

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -90,8 +90,8 @@ $user = getUser($_GET['email']);
 
 					  <div id="name">
 					    <label for="firstName" class="mas">First Name:</label>
-					    <input type="text" id="firstName" name="firstName" class="mas">
-
+                        <?php echo $user->getName()->getFullName();?>
+					    <input type="text" id="firstName" name="firstName" class="mas" value="<?php echo $user->getName()->getGivenName();?>">
 					    <br>
 
 					    <label class="mas">Last Name:</label>
@@ -102,7 +102,7 @@ $user = getUser($_GET['email']);
 
 					  <div id="cc">
 					  	<label for="ccNumber" class="mas">Credit Card:</label>
-					  	<input type="text" id="ccNumber" name="ccNumber" class="mas">
+					  	<input type="text" id="ccNumber" name="ccNumber" class="mas" value=>
 
 					  	<br>
 
