Beginning integration for auto-population on the admin members edit page

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -102,7 +102,7 @@ $user = getUser($_GET['email']);
 
 					  <div id="cc">
 					  	<label for="ccNumber" class="mas">Credit Card:</label>
-					  	<input type="text" id="ccNumber" name="ccNumber" class="mas" value="<?php echo $user->getCustomSchemas()->getSubscriptionManagement()->getStripeID();?>">
+					  	<input type="text" id="ccNumber" name="ccNumber" class="mas" value="<?php echo $user->getCustomSchemas()->getSubscriptionManagement();?>">
 
 					  	<br>
 
