--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -25,9 +25,9 @@
                     <input type="text" style="width: 60%" class="col-md-6 form-control" id="username" placeholder="ex: username@decaturmakers.org">
                 </div>
 
-                <div class="checkbox">
+                <div class="form-group">
                     <label for="autorenew" class="col-md-3 control-label">Autorenew</label>
-                    <input type="checkbox" id="username">
+                    <input type="checkbox" id="autorenew">
                 </div>
 
             </form>
