--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -3,7 +3,7 @@
 
         <div class="row">
             <?php
-            echo '<form action="' . plugins_url( 'register.php', __FILE__ ) . '" method="POST" class="form-horizonal">';
+            echo '<form action="' . plugins_url( 'confirm.php', __FILE__ ) . '" method="POST" class="form-horizonal">';
             ?>
                 <div class="form-group">
                     <label for="title" class="col-md-3 control-label">First Name</label>
@@ -30,13 +30,12 @@
                     <input type="checkbox" id="autorenew">
                 </div>
 
+                <button class="btn">Submit</button>
+
             </form>
         </div>
 
-        <button class="btn">Submit</button>
-
-        <p style="font-style: italic">Payments have been secured with Stripe</p>
-
+        <!--<p style="font-style: italic">Payments have been secured with Stripe</p>-->
 
         <!-- ANGULAR -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
