--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -6,28 +6,39 @@
             echo '<form action="' . plugins_url( 'confirm.php', __FILE__ ) . '" method="POST" class="form-horizonal">';
             ?>
                 <div class="form-group">
-                    <label for="title" class="col-md-3 control-label">First Name</label>
-                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="title" placeholder="">
+                    <label for="first" class="col-md-3 control-label">First Name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="first" name="firstname" placeholder="">
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="last" class="col-md-3 control-label">Last Name</label>
-                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="last" placeholder="">
+                    <label for="last" class="col-md-3 control-label">Last Name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="last" name="lastname" placeholder="">
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="first" class="col-md-3 control-label">Email</label>
-                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="first" placeholder="">
+                    <label for="email" class="col-md-3 control-label">Email:</label>
+                    <div class="col-sm-10">
+                        <input type="email" style="width: 60%" class="col-md-6 form-control" id="email" name="email" placeholder="">
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="username" class="col-md-3 control-label" >Username</label>
-                    <input type="text" style="width: 60%" class="col-md-6 form-control" id="username" placeholder="ex: username@decaturmakers.org">
+                    <label for="username" class="col-md-3 control-label" >Username:</label>
+                    <div class="col-sm-10">
+                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="username" name="username" placeholder="ex: username@decaturmakers.org">
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="autorenew" class="col-md-3 control-label">Autorenew</label>
-                    <input type="checkbox" id="autorenew">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label><input type="checkbox" name="autorenew"> Autorenew Membership</label>
+                        </div>
+                    </div>
                 </div>
 
                 <button class="btn">Submit</button>
