--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -8,14 +8,14 @@
                 <div class="form-group">
                     <label for="first" class="col-md-3 control-label">First Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="first" name="firstname" placeholder="">
+                        <input type="text" style="width: 60%" class="form-control" id="first" name="firstname" placeholder="">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="last" class="col-md-3 control-label">Last Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="last" name="lastname" placeholder="">
+                        <input type="text" style="width: 60%" class="form-control" id="last" name="lastname" placeholder="">
                     </div>
                 </div>
 
