--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -34,14 +34,18 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                    <div class="col-sm-10">
                         <div class="checkbox">
                             <label><input type="checkbox" name="autorenew"> Autorenew Membership</label>
                         </div>
                     </div>
                 </div>
 
-                <button class="btn">Submit</button>
+                <div class="form-group">
+                    <div class="col-xs-offset-2 col-xs-10">
+                        <button class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
 
             </form>
         </div>
