--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -36,14 +36,14 @@
                 <div class="form-group">
                     <div class="col-sm-10">
                         <div class="checkbox">
-                            <label><input type="checkbox" name="autorenew"> Autorenew Membership</label>
+                            <label><input type="checkbox" name="autorenew" checked> Autorenew Membership</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-xs-offset-2 col-xs-10">
-                        <button class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
 
