--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -34,6 +34,19 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="type" class="col-md-3 control-label" >Membership type:</label>
+                    <div class="col-sm-10">
+                        <select class="col-md-6 form-control" name="type" id="type">
+                            <option value="basic-ind">Individual Basic</option>
+                            <option value="support-ind">Individual Supporter</option>
+                            <option value="basic-fam">Family Basic</option>
+                            <option value="support-fam">Family Supporter</option>
+                            <option value="invalid">Invalid</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <div class="col-sm-10">
                         <div class="checkbox">
                             <label><input type="checkbox" name="autorenew" checked> Autorenew Membership</label>
