--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -36,11 +36,11 @@
                 <div class="form-group">
                     <label for="type" class="col-md-3 control-label" >Membership type:</label>
                     <div class="col-sm-10">
-                        <select class="col-md-6 form-control" name="type" id="type">
-                            <option value="basic-ind">Individual Basic</option>
-                            <option value="support-ind">Individual Supporter</option>
-                            <option value="basic-fam">Family Basic</option>
-                            <option value="support-fam">Family Supporter</option>
+                        <select style="width: 25%" class="form-control" name="type" id="type">
+                            <option value="basic-ind">Individual Basic ($25/mo)</option>
+                            <option value="support-ind">Individual Supporter ($40/mo)</option>
+                            <option value="basic-fam">Family Basic ($50/mo)</option>
+                            <option value="support-fam">Family Supporter ($75/mo)</option>
                             <option value="invalid">Invalid</option>
                         </select>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <div class="col-sm-10">
                         <div class="checkbox">
-                            <label><input type="checkbox" name="autorenew" checked> Autorenew Membership</label>
+                            <label><input type="checkbox" name="autorenew" checked> Auto-renew Membership</label>
                         </div>
                     </div>
                 </div>
