--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -28,7 +28,8 @@
                 <div class="form-group">
                     <label for="username" class="col-md-3 control-label" >Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" style="width: 60%" class="col-md-6 form-control" id="username" name="username" placeholder="ex: username@decaturmakers.org">
+                        <input type="text" style="width: 30%" class="col-md-6 form-control" id="username" name="username" placeholder="">
+                        @decaturmakers.org
                     </div>
                 </div>
 
