Move resources directory, fix PHP errors in registration form (#51)
* Update Stripe function to accept email and amt

* New Stripe functions for getting plan and customer

* move resources folder outside of admin-pages

* registration form updates (confirmation page, Stripe integration)

--- a/front-end-pages/admin-pages/test/form.html
+++ b/front-end-pages/admin-pages/test/form.html
@@ -1,5 +1,5 @@
 <?php
-include dirname(__DIR__).'/resources/StripeAPI.php';
+include dirname(__DIR__).'/../resources/StripeAPI.php';
 ?>
 
 <?php
@@ -11,11 +11,13 @@ echo '<form action="' . plugins_url( 'register.php', __FILE__ ) . '" method="POS
     <input type="text" name="lastname"><br>
     Membership type:<br>
     <select name="type">
-        <option value="ib">Individual Basic</option>
-        <option value="is">Individual Supporter</option>
-        <option value="fb">Family Basic</option>
-        <option value="fs">Family Supporter</option>
+        <option value="basic-ind">Individual Basic</option>
+        <option value="support-ind">Individual Supporter</option>
+        <option value="basic-fam">Family Basic</option>
+        <option value="support-fam">Family Supporter</option>
+        <option value="invalid">Invalid</option>
     </select>
     <br>
-    <?php getStripeCheckout() ?>
+    <input type="checkbox" name="recurring" value="true" checked="checked"> Recurring<br>
+    <?php getStripeCheckout("decaturmakers@test.com", "2500") ?>
 </form>
