--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -10,28 +10,33 @@
 			Integrations Page for Admin
 		</title>
 	</head>
+    
+    <?php
+        include dirname(__DIR__).'../../resources/GSuiteAPI.php';
+        include dirname(__DIR__).'../../resources/StripeAPI.php';
+    ?>
 	
 	<body>
 
 		<table class="mas">
 			<tr class="mas">
 				<td class="mas">	
-					<form>
+					<form action="">
 
 					  <div id="slack">
-					  	<h1 class="mas">Slack</h1>
-					    <label for="domain" class="mas">Slack Domain:</label>
-					    <input type="text" id="domain" name="domain" class="mas">
+					  	<h1 class="mas">Stripe</h1>
+					    <label for="domain" class="mas">Stripe Public Key:</label>
+					    <input type="text" id="stripe-public" name="stripe-public" class="mas" value="<?php getStripePublic()?>">
 					    <br>
-					    <label for="key" class="mas">API Key:</label>
-					    <input type="text" id="key" name="key" class="mas">
+					    <label for="key" class="mas">Stripe Private Key:</label>
+					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php getStripePrivate()?>">
 					  </div>
 
 					</form>
 				</td>
 
 				<td class="mas">
-					<button class="mas-save" type="submit">Save Changes</button>
+					<input id="slack-save" class="mas-save" type="submit">Save Changes</input>
 				</td>
 			</tr>
 
@@ -39,18 +44,15 @@
 				<td class="mas">
 					<form>
 						<div id="G Suite">
-							<h1 class="mas">Google for Non-Profits</h1>
-							<label for="domain" class="mas">Google Domain:</label>
-							<input type="text" id="domain" name="domain" class="mas">
-							<br>
-							<label for="key" class="mas">API Key:</label>
-							<input type="text" id="key" name="key" class="mas">
+							<h1 class="mas">GSuite for Non-Profits</h1>
+							<label for="gsuite-json" class="mas">GSuite Access JSON:</label>
+							<textarea rows="10" id="gsuite-json" name="gsuite-json" class="mas" value="<?php getGSuiteCredentials()?>">
 						</div>
 					</form>
 				</td>
 
 				<td class="mas">
-					<button class="mas-save" type="submit">Save Changes</button>
+					<input class="mas-save" type="submit">Save Changes</input>
 				</td>
 			</tr>
 		</table>
