--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -12,8 +12,8 @@
 	</head>
     
     <?php
-        include dirname(__DIR__).'../resources/GSuiteAPI.php';
-        include dirname(__DIR__).'../resources/StripeAPI.php';
+        include '../resources/GSuiteAPI.php';
+        include '../resources/StripeAPI.php';
     ?>
 	
 	<body>
