--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -12,8 +12,8 @@
 	</head>
     
     <?php
-        include plugin_dir_path( __FILE__ ).'front-end-pages/resources/GSuiteAPI.php';
-        include plugin_dir_path( __FILE__ ).'front-end-pages/resources/StripeAPI.php';
+        include plugins_url( '../resources/GSuiteAPI.php', __FILE__ );
+        include plugins_url( '../resources/StripeAPI.php', __FILE__ );
     ?>
 	
 	<body>
