--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -26,10 +26,10 @@
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
 					    <label for="domain" class="mas">Stripe Public Key:</label>
-					    <input type="text" id="stripe-public" name="stripe-public" class="mas" value="<?php echo getStripePublic()?>">
+					    <input type="text" id="stripe-public" name="stripe-public" class="mas" value="">
 					    <br>
 					    <label for="key" class="mas">Stripe Private Key:</label>
-					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php echo getStripePrivate()?>">
+					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="">
 					  </div>
 
 					</form>
@@ -46,7 +46,7 @@
 						<div id="G Suite">
 							<h1 class="mas">GSuite for Non-Profits</h1>
 							<label for="gsuite-json" class="mas">GSuite Access JSON:</label>
-							<textarea rows="10" id="gsuite-json" name="gsuite-json" class="mas" value="<?php echo  getGSuiteCredentials() ?>">
+							<textarea rows="10" id="gsuite-json" name="gsuite-json" class="mas" value="">
 						</div>
 					</form>
 				</td>
