--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -29,7 +29,7 @@
 					    <input type="text" id="stripe-public" name="stripe-public" class="mas" value="<?php echo getStripePublic()?>">
 					    <br>
 					    <label for="key" class="mas">Stripe Private Key:</label>
-					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php echo getStripePrivate()?>">
+					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php echo getStripeSecret()?>">
 					  </div>
 
 					</form>
