--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -46,7 +46,7 @@
 						<div id="G Suite">
 							<h1 class="mas">GSuite for Non-Profits</h1>
 							<label for="gsuite-json" class="mas">GSuite Access JSON:</label>
-                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas" value="<?php echo  getGSuiteCredentials() ?>"></textarea>
+                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials() ?></textarea>
 						</div>
 					</form>
 				</td>
