--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -21,7 +21,7 @@
 		<table class="mas">
 			<tr class="mas">
 				<td class="mas">	
-					<form action="<?php  . plugins_url( 'integrations-manager.php', __FILE__ ) .  ?>" method="post">
+					<form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
 
 					  <div id="slack">
 					  	<h1 class="mas">Stripe</h1>
@@ -42,7 +42,7 @@
 
 			<tr class="mas">
 				<td class="mas">
-					<form action="<?php  . plugins_url( 'integrations-manager.php', __FILE__ ) .  ?>" method="post">
+					<form action="<?php echo plugins_url( 'integrations-manager.php', __FILE__ ) ?>" method="post">
 						<div id="G Suite">
 							<h1 class="mas">GSuite for Non-Profits</h1>
 							<label for="gsuite-json" class="mas">GSuite Access JSON:</label>
