--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -36,7 +36,7 @@
 				</td>
 
 				<td class="mas">
-					<button id="slack-save" class="mas-save" type="submit">Save Changes</button>
+					<input id="slack-save" class="mas-save" type="submit" value="Save Changes">
 				</td>
 			</tr>
 
@@ -52,7 +52,7 @@
 				</td>
 
 				<td class="mas">
-					<button class="mas-save" type="submit">Save Changes</button>
+					<input id="gsuite-save" class="mas-save" type="submit" value="Save Changes">
 				</td>
 			</tr>
 		</table>
