--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -48,7 +48,7 @@
                         </div>
 
                     </td>
-                    <td>
+                    <td class="mas">
                         <input id="gsuite-save" class="mas-save" type="submit" value="Save Changes">
                     </td>
                 </form>
