Fixed filestructure to account for changes in the filestructure in the UI branch

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -12,8 +12,8 @@
 	</head>
     
     <?php
-        include __DIR__ . '/../resources/GSuiteAPI.php';
-        include __DIR__ . '/../resources/StripeAPI.php';
+        include __DIR__ . '/../../resources/GSuiteAPI.php';
+        include __DIR__ . '/../../resources/StripeAPI.php';
     ?>
 	
 	<body>
