--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -2,6 +2,7 @@
 echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-edit.css', __FILE__ ) . '">' . "\n";
 
 include dirname(__DIR__).'../../../resources/GSuiteAPI.php';
+include dirname(__DIR__).'../../../resources/StripeAPI.php';
 
 $user = getUser($_GET['email']);
 
@@ -30,8 +31,11 @@ $user = getUser($_GET['email']);
 					</form>
                     <br>
                     <form action="update-card.php" method="POST">
-                        <input type="hidden" name="email" value = "<?php getStripeUpdateCard($email); ?>">
-                        <input type="submit" value="Update Credit Card">
+                        <input type="hidden" value="<php? 
+                            $sub_mgmt = $user->getCustomSchemas()['Subscription_Management'];
+                            $stripe_id = !empty($sub_mgmt['Stripe_ID']) ? $sub_mgmt['Stripe_ID''] : '';
+                            echo $stripe_id; ?>" name="customer-id"
+                        <?php getStripeUpdateCard($email); ?>
                     </form>
 				</td>
 
