--- a/front-end-pages/admin-pages/admin-header.html
+++ b/front-end-pages/admin-pages/admin-header.html
@@ -1,4 +1,10 @@
 <?php
+
+// Preventing direct access
+if ( ! defined( 'WPINC' ) ) {
+	die;
+}
+
 echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-header.css', __FILE__ ) . '">' . "\n";
 ?>
 <a href="admin.php?page=mas-plugin&content=1"><button class="button">Members</button></a>
