Attempt to make registration form a single page

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -2,7 +2,7 @@
 
         <div class="row">
             <?php
-            echo '<form action="' . plugins_url( 'confirm.php', __FILE__ ) . '" method="POST" class="form-horizonal">';
+            echo '<form action="?action=review" method="POST" class="form-horizonal">';
             ?>
                 <div class="form-group">
                     <label for="first" class="col-md-3 control-label">First Name:</label>
