--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,65 +1,55 @@
         <br>
+        
+        <h3>Register as Member</h3>
 
         <div class="container">
             <div class="row">
                 <form action="?action=review" method="POST" class="form-horizonal">
-
-                    <div class="form-group">
-                        <label for="first" class="col-md-3 control-label">First Name:</label>
-                        <div class="col-sm-10">
-                            <input type="text" style="width: 60%" class="form-control" id="first" name="firstname" placeholder="">
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <label for="first" class="control-label">First Name:</label>
+                            <input type="text" class="form-control" id="first" name="firstname" placeholder="">
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="last" class="col-md-3 control-label">Last Name:</label>
-                        <div class="col-sm-10">
-                            <input type="text" style="width: 60%" class="form-control" id="last" name="lastname" placeholder="">
+                        <div class="form-group">
+                            <label for="last" class="control-label">Last Name:</label>
+                            <input type="text" class="form-control" id="last" name="lastname" placeholder="">
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="email" class="col-md-3 control-label">Email:</label>
-                        <div class="col-sm-10">
-                            <input type="email" style="width: 60%" class="col-md-6 form-control" id="email" name="email" placeholder="">
+                        <div class="form-group">
+                            <label for="email" class="control-label">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="">
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="username" class="col-md-3 control-label" >Username:</label>
-                        <div class="col-sm-10">
-                            <input type="text" style="width: 30%" class="col-md-6 form-control" id="username" name="username" placeholder="">
+                        <div class="form-group">
+                            <label for="username" class="control-label" >Username:</label>
+                            <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
                             @decaturmakers.org
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="type" class="col-md-3 control-label" >Membership type:</label>
-                        <div class="col-sm-10">
-                            <select style="width: 25%" class="form-control" name="type" id="type">
-                                <option value="basic-ind">Individual Basic ($25/mo)</option>
-                                <option value="support-ind">Individual Supporter ($40/mo)</option>
-                                <option value="basic-fam">Family Basic ($50/mo)</option>
-                                <option value="support-fam">Family Supporter ($75/mo)</option>
-                                <option value="invalid">Invalid</option>
-                            </select>
+
+
+                        <div class="form-group">
+                            <label for="type" class="control-label" >Membership type:</label>
+                                <select class="form-control" name="type" id="type">
+                                    <option value="basic-ind">Individual Basic ($25/mo)</option>
+                                    <option value="support-ind">Individual Supporter ($40/mo)</option>
+                                    <option value="basic-fam">Family Basic ($50/mo)</option>
+                                    <option value="support-fam">Family Supporter ($75/mo)</option>
+                                    <option value="invalid">Invalid</option>
+                                </select>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-sm-10">
+                        <div class="form-group">
                             <div class="checkbox">
                                 <label><input type="checkbox" name="autorenew" checked> Auto-renew Membership</label>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-xs-offset-2 col-xs-10">
+                        <div class="form-group">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
-
                 </form>
             </div>
         </div>
