Fixed theme conflicts on classes page

--- a/front-end-pages/admin-pages/classes-tab/admin-create-class.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-create-class.html
@@ -1,5 +1,5 @@
 <?php
-    //wp_enqueue_style( 'bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
+    wp_enqueue_style( 'bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
 
     wp_enqueue_script( 'jquery', '//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js');
     wp_enqueue_script('bootstrap', '//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js');
@@ -15,7 +15,7 @@
 		<title>Create A New Class</title>
 	</head>
 	
-	<body>
+	<body style="background-color: #EBEBEB">
 		<br>
 
 	<!-- 
