--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -16,7 +16,7 @@
 		<title>Classes</title>
 	</head>
 
-	<body>
+	<body style="background-color: #EBEBEB">
 		<br>
 		<div class="row">
 			<div class="col-md-5">
