--- a/front-end-pages/admin-pages/classes-tab/admin-create-class.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-create-class.html
@@ -27,10 +27,10 @@
 		Max number of attendees
 		Required skills	
 	-->
-		<div class="panel panel-default" style="width:60%">
+		<div class="panel panel-info" style="width:60%">
 			
 			<div class="panel-heading">
-				<h3 class="mas panel-title">Create A New Class</h3>
+				<h3 class="panel-title">Create A New Class</h3>
 			</div>
 
 			<div class="panel-body">
