Fixed theme conflicts on classes page

--- a/front-end-pages/admin-pages/classes-tab/admin-create-class.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-create-class.html
@@ -6,16 +6,8 @@
     wp_enqueue_script('angular', '//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js');
 ?>
 
-<!DOCTYPE html>
-<html>
-	<head>
-		<?php
-            echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-classes.css', __FILE__ ) . '">' . "\n";
-        ?>
-		<title>Create A New Class</title>
-	</head>
 	
-	<body style="background-color: #EBEBEB">
+	<body style="">
 		<br>
 
 	<!-- 
@@ -77,4 +69,3 @@
 
 		<button class="btn mas-create">Submit New Class</button>
 	</body>
-</html>
