--- a/front-end-pages/admin-pages/classes-tab/admin-classes.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.html
@@ -20,9 +20,9 @@
 		<br>
 		<div class="row">
 			<div class="col-md-5">
-				<div class="panel panel-default">
-				  <div class="panel-heading">
-				    <h3 class="mas panel-title">Class Details</h3>
+				<div class="panel panel-info">
+				  <div class="panel-heading text-center">
+				    <h3 class="panel-title">Class Details</h3>
 				  </div>
 				  <div class="panel-body">
 				    Select a class to the right to view and edit details.
