--- a/front-end-pages/admin-pages/classes-tab/admin-create-class.html
+++ b/front-end-pages/admin-pages/classes-tab/admin-create-class.html
@@ -21,7 +21,7 @@
 -->
 <div class="panel panel-info" style="width:60%">
 
-    <div class="panel-heading">
+    <div class="panel-heading text-center">
         <h3 class="panel-title">Create A New Class</h3>
     </div>
 
